--- a/styles/popup.css
+++ b/styles/popup.css
@@ -762,6 +762,8 @@ table {
 	outline: none;
 	background: transparent;
 	flex: 1;
+	width: 100%;
+	box-sizing: border-box;
 }
 
 .filterSearchInputWrap .closeInput {
