--- a/styles/popup.css
+++ b/styles/popup.css
@@ -140,6 +140,7 @@ table {
 	--black: #3f4653;
 	--error: #c10f0f;
 	--blue: #0086f0;
+	--cream: #ffe8b8;
 }
 
 * {
@@ -1165,7 +1166,7 @@ button:hover {
 	width: 100%;
 	height: 44px;
 	border-radius: 2px;
-	background-color: #e6eaf0;
+	background-color: var(--secondary);
 	font-family: 'Inter', Arial, Helvetica, sans-serif;
 	font-size: 14px;
 	font-weight: 500;
@@ -1173,3 +1174,58 @@ button:hover {
 	border: none;
 	cursor: pointer;
 }
+
+/* @Modal Css */
+.modal_heading {
+	height: 50px;
+	background: var(--cream);
+	font-size: 13px;
+	font-weight: normal;
+	font-stretch: normal;
+	font-style: normal;
+	line-height: 1.38;
+	letter-spacing: normal;
+	text-align: center;
+	color: var(--black);
+}
+
+.modal__icon {
+	margin-bottom: 20px;
+}
+
+.modal__text {
+	font-size: 17px;
+	font-weight: 500;
+	font-stretch: normal;
+	font-style: normal;
+	line-height: normal;
+	letter-spacing: normal;
+	text-align: center;
+	color: var(--secondaryDark);
+}
+
+.modal__btnContainer {
+	padding: 20px;
+}
+
+.editBlockListBtn {
+	height: 44px;
+	border-radius: 2px;
+	background-color: var(--secondary);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-size: 14px;
+	font-weight: 500;
+	font-stretch: normal;
+	font-style: normal;
+	line-height: normal;
+	letter-spacing: normal;
+	text-align: center;
+	color: var(--secondaryDark);
+	border: none;
+	cursor: pointer;
+	width: 100%;
+}
+
+/* @Modal Css */
