--- a/styles/popup.css
+++ b/styles/popup.css
@@ -732,6 +732,11 @@ table {
 	transition: ease all 240ms;
 }
 
+.clearDataButtonContent .clearData.disabled {
+	pointer-events: none;
+	opacity: 0.6;
+}
+
 .clearDataButtonContent .clearData:hover {
 	box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.8);
 }
@@ -823,7 +828,7 @@ table {
 
 button:hover {
 	transition: ease all 240ms;
-	box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.4);
+	box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.1);
 }
 
 .addThisWebsite {
