--- a/styles/blockSite.css
+++ b/styles/blockSite.css
@@ -144,7 +144,7 @@ body,
 }
 /* blockedSiteBg.jpg */
 .siteMainContainer {
-	background-image: url(../assets/blockedSiteBg.jpg);
+	background-image: url(../icons/blockedSiteBg.jpg);
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
