--- a/styles/popup.css
+++ b/styles/popup.css
@@ -795,6 +795,9 @@ table {
 	box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.8);
 }
 
+.clearDataButtonContent .clearData.progressDisable {
+	pointer-events: none;
+}
 .clearDataButtonContent .clearData.disabled {
 	pointer-events: none;
 	opacity: 0.6;
@@ -1354,4 +1357,55 @@ button:hover {
 .apexcharts-legend.position-right,
 .apexcharts-legend.position-left {
 	flex-direction: row !important;
+}
+
+.checkmark__circle {
+	stroke-dasharray: 166;
+	stroke-dashoffset: 166;
+	stroke-width: 2;
+	stroke-miterlimit: 10;
+	stroke: var(--primary);
+	fill: none;
+	animation: stroke 0.6s cubic-bezier(0.65, 0, 0.45, 1) forwards;
+}
+
+.checkmark {
+	width: 35px;
+	height: 35px;
+	border-radius: 50%;
+	display: block;
+	stroke-width: 2;
+	stroke: #fff;
+	stroke-miterlimit: 10;
+	margin: 10% auto;
+	box-shadow: inset 0px 0px 0px var(--primary);
+	animation: fill 0.4s ease-in-out 0.4s forwards,
+		scale 0.3s ease-in-out 0.9s both;
+}
+
+.checkmark__check {
+	transform-origin: 50% 50%;
+	stroke-dasharray: 48;
+	stroke-dashoffset: 48;
+	animation: stroke 0.3s cubic-bezier(0.65, 0, 0.45, 1) 0.8s forwards;
+}
+
+@keyframes stroke {
+	100% {
+		stroke-dashoffset: 0;
+	}
+}
+@keyframes scale {
+	0%,
+	100% {
+		transform: none;
+	}
+	50% {
+		transform: scale3d(1.1, 1.1, 1);
+	}
+}
+@keyframes fill {
+	100% {
+		box-shadow: inset 0px 0px 0px 30px var(--primary);
+	}
 }
