--- a/styles/popup.css
+++ b/styles/popup.css
@@ -425,6 +425,15 @@ table {
 	color: var(--primaryDark);
 }
 
+.popupWrap__tabWrap .popupTab .stroked,
+.popupWrap__tabWrap .popupTab.active .nonStroked{
+	display: none;
+}
+
+.popupWrap__tabWrap .popupTab.active .stroked{
+	display: block;
+}
+
 .popupWrap__tabWrap .popupTab::after {
 	display: block;
 	position: absolute;
@@ -1364,7 +1373,7 @@ button:hover {
 	stroke-dashoffset: 166;
 	stroke-width: 2;
 	stroke-miterlimit: 10;
-	stroke: var(--primary);
+	stroke: var(--white);
 	fill: none;
 	animation: stroke 0.6s cubic-bezier(0.65, 0, 0.45, 1) forwards;
 }
@@ -1375,10 +1384,10 @@ button:hover {
 	border-radius: 50%;
 	display: block;
 	stroke-width: 2;
-	stroke: #fff;
+	stroke: var(--primaryDark);
 	stroke-miterlimit: 10;
 	margin: 10% auto;
-	box-shadow: inset 0px 0px 0px var(--primary);
+	box-shadow: inset 0px 0px 0px var(--white);
 	animation: fill 0.4s ease-in-out 0.4s forwards,
 		scale 0.3s ease-in-out 0.9s both;
 }
@@ -1406,6 +1415,6 @@ button:hover {
 }
 @keyframes fill {
 	100% {
-		box-shadow: inset 0px 0px 0px 30px var(--primary);
+		box-shadow: inset 0px 0px 0px 30px var(--white);
 	}
 }
